--- a/src/index.njk
+++ b/src/index.njk
@@ -6,7 +6,7 @@ layout: 'base.njk'
 	<section class="hero">
 		<div class="container flow">
 			<div class="hero__content flow">
-				<h1 class="section-title">Welcome to my blog!</h1>
+				<h1 class="section-title">Welcome to Oleg's blog!</h1>
 				<p>
 					I use this space to document my adventures in front-end development,
 					sharing how I’ve overcome issues I’ve run into, useful resources, and
