Add Dummy button

--- a/src/index.njk
+++ b/src/index.njk
@@ -23,6 +23,9 @@ layout: 'base.njk'
 					<a href="./blog" class="btn btn--neutral"
 						>Most recent articles</a
 					>
+					<a href="#" class="btn btn--warning"
+						>Dummy Button</a
+					>
 				</div>
 			</div>
 			<div>
